# wooshh

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Makefile  README.md  install.sh
.github/: CODE_OF_CONDUCT.md
.github/workflows/: ci.yml  no-response.yml  release.yml
notifier-macos/: build-notifier.sh  main.swift
notifier-macos/WooshhNotifier.app/Contents/: Info.plist
notifier-macos/WooshhNotifier.app/Contents/MacOS/: wooshh-notifier
src/: main.rs
