[package]
name = "wooshh"
version = "0.3.0"
edition = "2021"
authors = ["Aniket Patel <velvety.03-wonders@icloud.com>"]
license = "MIT"
description = "A tool to play sound when cmd run successfully"
readme = "README.md"
homepage = "https://github.com/mehuaniket/wooshh"
repository = "https://github.com/mehuaniket/wooshh"
keywords = ["cli", "time", "sound"]
categories = ["command-line-utilities"]

[[bin]]
name = "wooshh"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
humantime = "2.1.0"
rusty_audio = "1.4.1"
openssl-sys = { version = "0.9", features = ["vendored"] }
requestty = "0.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
reqwest = { version = "0.11.20", features = ["blocking"] }


[dev-dependencies]
rusty-hook = "0.11"

[profile.release]
opt-level = "z"
codegen-units = 1

